ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
12/17/10 Daniel K. O.
        * Applied patches from Daniel Fiser for new colliders based on libccd.

11/08/10 Daniel K. O.
        * Applied patches from Daniel Fiser to incorporate libccd for
          Cylinder-Cylinder collision tests.

08/21/10 Oleh Derevenko
        * Fix applied to dxReallocateTemporayWorldProcessContext() to remove typo 
          which caused segmentation fault (by Kyle McKay).
          dTestSolveLCP() fixed to avoid exceeding allocated memory pool 
          (by Kyle McKay).
07/19/10 Oleh Derevenko
        * Patch applied (#3030783) to fix drawstuff dimensions being ignored
          in OSX GLUT port (by Danny Price).

         Daniel K. O.
        * Applied patch #2991622: dGeomGetRelPointPos, dGeomGetPosRelPoint,
          dGeomVectorToWorld, and dGeomVectorFromWorld.

07/16/10 Daniel K. O.
        * Fixed bug #2937076: don't try to build demos if drawstuff is disabled.

05/02/10 Oleh Derevenko
        * Missing extern "C" wrapper has been added to include/ode/export-dif.h
          (reported by Danny Price). The change affects dWorldExportDIF() public 
          function.

05/02/10 Oleh Derevenko
        * Patch applied (#2995450) to generate up to four contacts for box-
          plane collision test (by alexdu) and fix contact depths.

05/02/10 Oleh Derevenko
        * dGeomLowLevelControl function added with ability to change/query OPCODE 
          trimesh-sphere contact merging behavior at runtime.

02/18/10 Daniel K. O.
        * Fixed bug affecting disabled joints and dWorldStep.

01/16/10 Oleh Derevenko
        * Patch applied (#2931174) to make demos work for recent MacOS.